# fcitx5-android

./: .gitmodules
app/src/main/java/org/fcitx/fcitx5/android/input/candidates/: CandidateItemUi.kt  CandidateViewHolder.kt
app/src/main/java/org/fcitx/fcitx5/android/input/candidates/expanded/: PagingCandidateViewAdapter.kt
app/src/main/java/org/fcitx/fcitx5/android/input/candidates/horizontal/: HorizontalCandidateViewAdapter.kt
plugin/rime/: build.gradle.kts
plugin/rime/src/main/cpp/: CMakeLists.txt
